# assistant

./: .clang-format  .gitignore  CMakeLists.txt  TitleBar分析文档.md  readme.md
assistant/: assistant.pro  bluetooth.cpp  bluetooth.h  def.h  download.cpp  download.h  main.cpp  main.rc  mainwin.cpp  mainwin.h  network.cpp  network.h  osc.cpp  osc.h  pid.cpp  pid.h  resource.qrc  serialport_info.cpp  serialport_info.h  serialportinfo.cpp  serialportinfo.h  tille.cpp  tille.h  uart.cpp  uart.h  widget.cpp  widget.h  widget.ui  ymodem.cpp  ymodem.h
assistant/com/: com.cpp  com.h
assistant/dowload/: download.cpp  download.h
assistant/dowload/hex2bin_bin2hex/: convert.c  convert.h
assistant/dowload/isp/: stm32_isp.c  stm32_isp.h
assistant/dowload/ymodem/: ymodem.c  ymodem.h
assistant/net/: network.cpp  network.h
assistant/osc/: osc.cpp  osc.h
assistant/pid/: pid.cpp  pid.h
assistant/qcustomplot/: qcustomplot.cpp  qcustomplot.h
assistant/resources/: app.manifest  main.rc  resource.qrc
assistant/resources/style/: center.css  tille.css
assistant/style/: center.css  tille.css
assistant/tille/: TitleBar.cpp  TitleBar.h  tille.cpp  tille.h
